Downloaded js and css files to run offline

--- a/CostumePy/templates/index.html
+++ b/CostumePy/templates/index.html
@@ -6,17 +6,14 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>CostumePy</title>
 
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+      <link rel="stylesheet" href="../static/bootstrap.min.css">
+      <script src="../static/jquery.min.js"></script>
+      <script src="../static/bootstrap.min.js"></script>
 
     </head>
     <body>
         <div id="app1"></div>
-        <script src="https://unpkg.com/vue"></script>
+        <script src="../static/vue.js"></script>
         <script src="../static/CostumePy.js"></script>
     </body>
 </html>
